@@ -137,7 +137,7 @@ import org.matsim.vehicles.VehicleType;
 
       while (true) {
         Collections.shuffle(linkList, random);
-        Link pendingFromLink = linkList.get(0);
+        Link pendingFromLink = linkList.getFirst();
         if (pendingFromLink.getFromNode().getCoord().getX() <= 4000
             && pendingFromLink.getFromNode().getCoord().getY() <= 4000
             && pendingFromLink.getToNode().getCoord().getX() <= 4000
@@ -254,7 +254,7 @@ import org.matsim.vehicles.VehicleType;
     @Override
     public void handleEvent(CarrierServiceEndEvent event) {
       double tip = tipRandom.nextDouble() * 5;
-      log.warn("tipSum=" + tipSum + "; tip=" + tip);
+      log.warn("tipSum={}; tip={}", tipSum, tip);
       tipSum += tip;
     }
 
