@@ -167,7 +167,7 @@ class ExampleCheckRequirementsOfAssigner {
 
       while (true) {
         Collections.shuffle(linkList);
-        Link pendingFromLink = linkList.get(0);
+        Link pendingFromLink = linkList.getFirst();
         if (pendingFromLink.getFromNode().getCoord().getX() <= 4000
             && pendingFromLink.getFromNode().getCoord().getY() <= 4000
             && pendingFromLink.getToNode().getCoord().getX() <= 4000
